--- a/Html4Study/index.html
+++ b/Html4Study/index.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<title>这是测试提交</title>
-	</head>
-	<body>
-		
-	</body>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title></title>
+<style type="text/css">
+#myCanvas {
+    background:red;
+    width:200px;
+    height:100px;
+}
+</style>
+</head>
+<body>
+<canvas id="myCanvas">该浏览器不支持HTML5的画布标记！</canvas>
+</body>
 </html>
