--- a/Html4Study/index.html
+++ b/Html4Study/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title></title>
-	</head>
-	<body>
-	</body>
-</html>
+<meta charset="utf-8">
+<title>标题</title>
+<p>段落
